FIx horizontal scroll issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,6 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    padding: 1%;
     color: #ffffff;
 }
 
